optimisation du style du navbar fixation du navbar avec z-index 2

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -2,9 +2,13 @@
     background: #326799;
     display: flex;
     flex-direction: row;
-    height: 70px;
+    height: 5rem;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    z-index: 2;
+    top: 0px;
     
 }
 .section-togle{
@@ -20,7 +24,7 @@
     margin-right: 5rem;
 }
 .reglage-style{
-    color: #c21212;
+    color: #326799;
     font-size: 1.5rem;
     text-align: center;
 }
